--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,7 +25,7 @@
 				<!-- Navbar -->
 				<div class="ui attached inverted menu">
 				  	{{ m.nav_link('index', 'Home') }}
-					{{ m.nav_link('about', 'About') }}
+				  	{{ m.nav_link('map', 'Map') }}
 					{{ m.nav_link('contact', 'Contact') }}
 				 	<div class="right menu">
 				 		<!-- User is logged in -->
