--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% import "macros.html" as m %}
 <html lang="en">
-	<body id="container" style={background-color:"f24602"}>
+	<body id="container" style= "background-color: #f24602">
    		<div id="header">
    			{% block head %}
 				<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
