--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -65,10 +65,7 @@
 			<div class="ui divider"></div>
 	    		<div class="ui divided horizontal footer link list">
 			      	<div class="item">
-			        	Max Halford
-			      	</div>
-			      	<div class="item">
-			        	<a href="https://github.com/MaxHalford"><i class="github icon"></i></a>
+			        	FastIdea 2019
 			      	</div>
 	    		</div>
 	  		</div>
