--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -3,8 +3,8 @@
 html,
 body {
    margin:0;
-   margin-left: 15px;
-   margin-right: 15px;
+   margin-left: 60px;
+   margin-right: 60px;
    padding:0;
    height:100%;
    overflow-x: hidden;
@@ -12,8 +12,14 @@ body {
 }
 
 p{
-   text-size: 16px;
+   text-size: 24px;
+   color: #fff;
    
+}
+
+h1{
+   text-size: 48px;  
+   color: #fff;
 }
 
 #container {
