--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,13 +10,18 @@
 
 	{% if current_user.is_authenticated %}
 	  	<h2 class="ui header">welcome back {{ current_user.first_name }}!</h2>
-<p "color: #FFF; font-size: 20px; font-family: lato;"> share your idea <span style="color: #303dc9; font-size: 30px;"> OR </span> find other ideas! </p>
+		<p "color: #FFF; font-size: 20px; font-family: lato;"> Find an idea or post one! </p>
 	{% else %}
 <p style = "color: #FFF; font-size: 20px; font-family: lato;"> Welcome to <b>FastIdea!</b> We are a platform designed by students for students. </p>
-		<p style = "color: #FFF; font-size: 20px; font-family: lato;"> If you want to join in, either <a href="user/signin"> sign in to your account</a> or <a href="user/signup"> sign up now!</a></p>
+		<p style = "color: #FFF; font-size: 20px; font-family: lato;"> If you want to join in, either <a style="color: #303dc9;" href="user/signin"> sign in to your account</a> or <a style = "color: #303dc9;" href="user/signup"> sign up now!</a></p>
 
 	{% endif %}
 	<hr>
 
 
+	<div class="preview">
+		
+	<p "color: #FFF; font-size: 20px; font-family: lato;"> share your idea <span style="color: #303dc9; font-size: 30px;"> OR </span> find other ideas! </p>	
+		
+	</div>
 {% endblock %}
