--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,7 +22,7 @@
 				<!-- Browser tab name -->
 				<title>{{ title }}</title>
 				<!-- Navbar -->
-				<div class="ui attached inverted menu">
+				<div class="ui attached inverted menu" style="border-radius: 0;">
 				  	{{ m.nav_link('index', 'Home') }}
 					{{ m.nav_link('contact', 'Contact') }}
 				 	<div class="right menu">
