--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,11 +18,11 @@
 	{% endif %}
 	<hr>
 
-
+	<center>
 	<div class="preview">
 		
 	<p style="margin-top: 40px; margin-bottom: 40px; color: #FFF; font-size: 20px; font-family: lato;"> share your idea <span style="color: #303dc9; font-size: 30px; font-weight: 700; margin-left: 40px; margin-right: 40px;"> OR </span> find other ideas! </p>	
-
+		</center>
 	<hr>
 		
 	</div>
