--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,8 +12,8 @@
 	  	<h2 class="ui header">welcome back {{ current_user.first_name }}!</h2>
 		<p "color: #FFF; font-size: 20px; font-family: lato;"> Find an idea or post one! </p>
 	{% else %}
-<p style = "color: #FFF; font-size: 20px; font-family: lato;"> Welcome to <b>FastIdea!</b> We are a platform designed by students for students. </p>
-		<p style = "color: #FFF; font-size: 20px; font-family: lato;"> If you want to join in, either <a style="color: #303dc9; font-weight: 700;" href="user/signin"> sign in to your account</a> or <a style = "color: #303dc9; font-weight: 700;" href="user/signup"> sign up now!</a></p>
+<p style = "text-align: justify; color: #FFF; font-size: 20px; font-family: lato;"> Welcome to <b>FastIdea!</b> We are a platform designed by students for students. </p>
+		<p style = "text-align: justify; color: #FFF; font-size: 20px; font-family: lato;"> If you want to join in, either <a style="color: #303dc9; font-weight: 700;" href="user/signin"> sign in to your account</a> or <a style = "color: #303dc9; font-weight: 700;" href="user/signup"> sign up now!</a></p>
 
 	{% endif %}
 	<hr>
