--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
 	<center>
 	<div class="preview">
 		
-	<p style="margin-top: 40px; margin-bottom: 40px; color: #FFF; font-size: 20px; font-family: lato;"> share your idea <span style="color: #00b5ad; font-size: 30px; font-weight: 700; margin-left: 40px; margin-right: 40px;"> OR </span> find other ideas! </p>	
+	<p style="margin-top: 40px; margin-bottom: 40px; color: #FFF; font-size: 20px; font-family: lato;"> <a style="margin-top: 40px; margin-bottom: 40px; color: #FFF; font-size: 20px; font-family: lato; href="idea"> Share your idea </a> <span style="color: #00b5ad; font-size: 30px; font-weight: 700; margin-left: 40px; margin-right: 40px;"> OR </span> <a style="margin-top: 40px; margin-bottom: 40px; color: #FFF; font-size: 20px; font-family: lato; href="search"> sign up now!</a></p> Find other ideas! </p>	
 		</center>
 	<hr>
 		
